<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.robin.android.surtain_com.ui.apropos.AproposFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/logo1" />
        <!-- VILLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/apropos_ville"
            android:textSize="18sp"
            android:textColor="@color/noir"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/apropos_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_region"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_departement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_departement"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_prefet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_prefet"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_communaute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_communaute"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_canton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_canton"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <!-- MAIRIE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/apropos_mairie"
            android:textSize="18sp"
            android:textColor="@color/noir"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/apropos_maire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_maire"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>

        <TextView
            android:id="@+id/apropos_1adjoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/apropos_1_adjoint"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/apropos_2adjoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/apropos_2_adjoint"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/apropos_3adjoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/apropos_3_adjoint"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/apropos_4adjoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/apropos_4_adjoint"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <!-- COMMISSIONS -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/apropos_commission"
            android:textSize="18sp"
            android:textColor="@color/noir"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/apropos_1commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_1_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_2commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_2_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_3commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_3_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_4commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_4_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_5commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_5_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_6commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_6_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_7commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_7_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_8commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_8_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_9commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_9_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:id="@+id/apropos_10commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_10_commission"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <!-- DEVELOPPEMENT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/apropos_dev"
            android:textSize="18sp"
            android:textColor="@color/noir"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/apropos_data_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_data_version"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/apropos_developpeur"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/ubuntu"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>